<resources>
    <string name="application_name">NLHelpU</string>
    <string name="main_section_header">Services</string>
    <string name="about_header">About</string>
    <string name="main_activity_info_section">This app makes life easier when you have just moved to the Netherlands. It helps you apply for public services and archive a range of documents needed when you send in the applications. </string>
    <string name="about_activity_content">You can collect necessary documents, categorize and forward them to government or companies. We will you help by identifying which documents are necessary for every category. \n\nThis app has been created by employees of \'de Volksbank\' as part of an assignment in the \'KEI-program\' 2017. \n\nAre you interested in contributing to this app? Please go to https://github.com/devolksbank/NL-Help-U. Or contact the developers by using the contact button. \n\nThis app uses UCrop (https://github.com/Yalantis/uCrop)</string>
    <string name="button_hide_splash_screen">Start the app</string>
    <string name="button_open_splash_screen">Open splashscreen</string>
    <string name="button_feedback">Contact the developers</string>
    <string name="splash_screen_info">NLHelpU is an app you can use to find your way in the Dutch society. It allows you to manage the required documents for various services and share them with your contact person at Vluchtelingenwerk.</string>
    <string name="button_add_new_document_page">Add new page</string>
    <string name="button_mail_all_available_document_pages">Mail all available documents</string>
    <string name="button_delete_document_page">Delete</string>
    <string name="button_crop_document_page">Crop</string>
    <string name="document_collection_list_item_present_title">check</string>
    <string name="document_collection_list_item_not_present_title">add</string>
    <string name="mail_subject">Documents</string>
    <string name="mail_chooser_hint">Pick an Email provider</string>
    <string name="document_activity_header_section">This page shows all pages of the document</string>
    <string name="undo_document_part_delete_button">UNDO</string>
    <string name="undo_document_part_delete_button_details">Undo deletion</string>
    <string name="camera_permissions_error">Permissions for camera required for adding a new page</string>
    <string name="camera_general_error">Error processing camera output</string>
    <string name="mail_permissions_error">Sending mails is not possible without the external storage permission</string>
    <string name="mail_handler_error">No email app found on the device</string>
    <string name="support_title">My contact person</string>
    <string name="support_input_name">Name</string>
    <string name="support_input_email">Email</string>
    <string name="support_input_phone">Phonenumber</string>
    <string name="support_input_notes">Notes</string>
    <string name="support_header">Use this page for keeping track of the contact details of your contact person at Vluchtelingenwerk.</string>
    <string name="button_main_activity_assistant">My contact person</string>
    <string name="section_1">DigiD</string>
    <string name="section_2">Social welfare payments</string>
    <string name="section_3">Bank account</string>
    <string name="section_4">Health insurance</string>
    <string name="section_5">OV-chipkaart (public transport chip card)</string>
    <string name="section_6">Liability insurance</string>
    <string name="section_7">Phone number</string>
    <string name="section_header_1">DigiD is your digital ID for government services on the internet. You need it for almost everything, such as applying for a rent-rebate or social welfare payment.</string>
    <string name="section_header_2">You can request social welfare payments when you have insufficient income to live.</string>
    <string name="section_header_3">If you are staying in the Netherlands for more than a few months, it is very useful to have a Dutch payments account. It can be used to get your salary or benefits paid on and you can pay your expenditures with it.</string>
    <string name="section_header_4">Everyone who lives or works in the Netherlands must have a basic Health Insurance. When you live in a Reception Center (AZC), as an asylum seeker, your Health Insurance is provided by the Dutch Government. When your asylum is granted and you move out of the AZC, you have to take care of your Health Insurance yourself. Press i for more information.</string>
    <string name="section_header_5">The OV-chipkaart is a card you can use to pay for public transport in the Netherlands. If you have an OV-chipkaart you don\'t have to buy separate tickets for traveling by bus, train or subway.</string>
    <string name="section_header_6">A reliabitly insurance covers costs made when you accidentally break or damage something that belongs to someone else. If you live in a reception center (AZC), you have a liability insurance. This is taken care of by the COA. But when you move out of the AZC to you own home, this liability insurance stops.</string>
    <string name="section_header_7">When you are staying in the Netherlands for more than a few months, it is very useful to have a Dutch mobile phone number to save on costs. Read more...</string>
    <string-array name="section_details_1">
        <item>"Are you going to a town hall or to another public institution's office? In many cases, you must show your passport or driver's license. That's how the government knows who you are. On the internet you can digitally identify yourself by using your DigiD. With your DigiD you can log in to government and healthcare websites."</item>
        <item>Your DigiD consists of a username and password that you both choose yourself. Please note: username and password are strictly personal. Keep this information safe and prevent misuse. No-one may ask you for your username, password or activation code. Not by email, phone or any way.</item>
        <item><![CDATA[<b>How does DigiD work?</b>]]></item>
        <item>Imagine you want to apply for a rent allowance on the Tax Administration site. You will then be automatically forwarded to the DigiD login page from the Tax Office. You enter your DigiD username and password. Then you automatically return to the Tax Administration site, where you can apply for the rent allowance.</item>
        <item><![CDATA[<b>How to get a DigiD?</b>]]></item>
        <item>"You can apply for a DigiD on the internet, with the help of a Dutch assistant. When you create your DigiD, you can choose a username. As mentioned above it is important to keep this information safe and secure. Once the application has been processed, you will receive a letter containing your DigiD password. Your DigiD must be activated within 14 days. It is therefore important to archive this letter (don't throw it away!) and activate the DigiD as soon as possible.​"</item>
        <item><![CDATA[<b>Movies:</b>]]></item>
        <item><![CDATA[<a href="https://www.youtube.com/watch?v=jv68lO2uPUw">https://www.youtube.com/watch?v=jv68lO2uPUw</a>]]></item>
        <item><![CDATA[<a href="https://www.youtube.com/watch?v=IFIJMR6nn6w">https://www.youtube.com/watch?v=IFIJMR6nn6w</a>]]></item>
        <item><![CDATA[<a href="https://www.youtube.com/watch?v=dW28nCYx1ng">https://www.youtube.com/watch?v=dW28nCYx1ng</a>]]></item>
    </string-array>
    <string-array name="section_details_2">
        <item>It is important to be able to maintain yourself in the Netherlands. If you cannot, you are entitled to an assistance allowance (or social welfare payment) of the municipality where you live. These social welfare payments are intended as a temporary aid and you should intend to maintain yourself as soon as possible by finding a job.</item>
        <item>Are you under 27? Then you have to wait for four weeks and search for a job before applying for social welfare payments.</item>
        <item>In each municipality it is different how to apply for social welfare payments. There are 2 ways: online or directly at the municipality. To see how to apply, click on the link: <![CDATA[<a href="https://www.werk.nl/portal/page/portal/work_en/werknemer/uitkering-aanvragen/assistanceuitbetaling">https://www.werk.nl/portal/page/portal/work_en/werknemer/uitkering-aanvragen/bijdrageverzekering</a>]]>.</item>
        <item>Then sign in with your DigiD. How to apply for a DigiD is under the heading DigiD in this app. After logging in continue all steps. You will then see how you apply and you are automatically registered at UWV as a jobseeker. The proof of your registration can be found in your Workbook at werk.nl. On the \'Bijstandsuitkering aanvragen\' page, you can apply for social welfare payments through a digital form.</item>
        <item><![CDATA[<b>Gather data</​​b>]]></item>
        <item>To complete your application, collect the following information:</item>
        <item>1.Your citizenship number (BSN)</item>
        <item>2.Your DigiD</item>
        <item>3.Data about:</item>
        <item>• Your current income data (employment, tax return, alimony)</item>
        <item>• Your current benefits (with the amount of the amount granted)</item>
        <item>• Your living situation (height rent / mortgage)</item>
        <item>• Your last employer or employment agency for which you work or worked and the start date and end date of this employment.</item>
        <item>• your fellow residents (with BSN number and date of birth)</item>
        <item>• The income data of your partner (if applicable)</item>
        <item>• Evidence of application at UWV of your partner</item>
        <item>• The data about your wealth</item>
        <item>• The value of your assets and securities, the height of your debts and your bank accounts.</item>
        <item><![CDATA[<b>Continue Request Assistance Payment</b>]]></item>
        <item>At the end of the application, what is expected after sending the request. This depends on the arrangements with the municipality.</item>
        <item>Once you have sent the digital form completely, you will receive an email from UWV with confirmation that we have received the request. The e-mail contains a list of supporting documents that you must include when you are invited to a call, such as a valid ID (passport or ID, no driver\'s license).</item>
    </string-array>
    <string-array name="section_details_3">
        <item>All Dutch banks require that you live in the Netherlands and are subscribed to the GBA, Gemeentelijke Basis Administratie (Municipal Basic Administration). You are also required to have a Dutch identification or residence permit. Without these it will be impossible to request a bank account.</item>
        <item><![CDATA[<b>Extra options for residents from other EU member states</b>]]></item>
        <item>People who originate from other EU member state have extra options. Dutch banks have to treat residents from other EU member states in the same fashion as residents from their own country. If the bank denies your request due to your nationality, you can object at the bank. If escalation is necessary the next step is filing a complaint at the European extrajudicial complaints network for financial services.</item>
        <item><![CDATA[<b>Applying for a bank account</b>]]></item>
        <item>If you do comply with above requirements you can often request a payments account online at the different Dutch banks or by visiting their offices. On top of the savings account you can also use other financial services like requesting a creditcard. In the following overview you can see which banks in the Netherlands offer payments accounts and how much they charge for their services:</item>
        <item><![CDATA[<a href="https://www.bankenvergelijking.nl/prive-bankrekening">https://www.bankenvergelijking.nl/prive-bankrekening</a>]]></item>
    </string-array>
</resources>